--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 body{
     font-family: "Poppins", sans-serif;
     font-weight: 400;
